--- a/style.css
+++ b/style.css
@@ -42,3 +42,24 @@ html,body {
     background-color: #FF4136;
   }
 }
+
+
+#goTransaction{
+
+  width: 50px;
+  cursor: pointer;
+}
+
+#precogsLogo{
+
+  position:absolute;
+  top:2px;
+  left:2px;
+  width:200px;
+}
+
+textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {   
+  /*border-color: rgba(148, 184, 101, 0.8);*/
+  /*box-shadow: 0 0 5px rgba(148, 184, 101, 0.6);*/
+  /*outline: 0 none;*/
+}
