--- a/style.css
+++ b/style.css
@@ -63,3 +63,11 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
   /*box-shadow: 0 0 5px rgba(148, 184, 101, 0.6);*/
   /*outline: 0 none;*/
 }
+
+.badge-verified{
+   position:relative;
+   background:none;
+   color: green;
+   top: -15px;
+   left: -15px;
+}
